test/functions/deitz/test_return2.good
test_return2.chpl:1: error: Not all function returns return a value
